--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>hi</h1>
-    <script type="text/javascript" src="./ex28.js"></script>
+    <script type="text/javascript" src="./chapter5/ex9.js"></script>
 </body>
 </html>
